2006-03-06  Adam Jocksch  <ajocksch@redhat.com>

	* prefs/PreferenceEditor.java (PreferenceEditor): Added showAll().
	(setPreference): Removed call to showAll().
	* prefs/PreferenceWindow.java (selectionChangedEvent): Now adds the
	PreferenceEditors to a SizeGroup and no longer adds them with expand
	set to true.

	* prefs/PreferenceGroup.java (revertAll): Added.
	* prefs/PreferenceManager.java (revertAll): Added.
	* prefs/PreferenceWindow.java (PreferenceWindow): Adds self as listener
	to apply, cancel buttons.
	(buttonEvent): Added.

	* prefs/BooleanPreference.java: Added comments.
	* prefs/ColorPreference.java: Ditto.
	* prefs/FryskPreference.java: Ditto.
	* prefs/IntPreference.java: Ditto.
	* prefs/PreferenceEditor.java: Ditto.
	* prefs/PreferenceGroup.java: Ditto.
	* prefs/PreferenceManager.java: Ditto.
	* prefs/PreferenceWindow.java: Ditto.

2006-03-03  Adam Jocksch  <ajocksch@redhat.com>

	* prefs/BooleanPreference.java: Removed constants.
	(BooleanPreferenceListener): Added.
	(getDefaultValue): Removed.
	(BooleanPreference): Only constructor now takes a string, not an int,
	as well as a default value.
	(save): Now fires off events to listeners of this preference.
	(addListener): Added.
	(revert): Added.
	* prefs/ColorPreference.java: Removed constants.
	(ColorPreferenceListener): Added.
	(getDefaultValue): Removed.
	(ColorPreference): Now takes a string and a default color to use.
	(save): Now fires off events to listeners.
	(addListener): Added.
	(revert): Added.
	* prefs/FryskPreference.java (revert): Added.
	* prefs/IntPreference.java: Removed constants/
	(IntPreferenceListener): Added.
	(getDefaultValue): Removed.
	(IntPreference): Now takes a string, a default value to use, and a
	max and min value for the preference.
	(save): Now fires events to listeners.
	(addListener): Added.
	(revert): Added.
	(getMinValue): Added.
	(getMaxValue): Added.
	* prefs/PreferenceEditor.java: Added.
	* prefs/PreferenceGroup.java: Changed internal storage method to a